--- a/src/JobScheduler/MainWindow.xaml
+++ b/src/JobScheduler/MainWindow.xaml
@@ -2,11 +2,14 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="37*"/>
-            <RowDefinition Height="246*"/>
-            <RowDefinition Height="36*"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="41*"/>
@@ -16,11 +19,12 @@
         <Button Content="Start" Grid.Column="2" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="57" Height="20" Click="Button_Click_1"/>
         <Label x:Name="CounterLabel" Content="Label" Grid.Column="2" HorizontalAlignment="Left" Margin="10,10,0,10" Grid.Row="2" Width="75"/>
         <Border BorderBrush="Black" BorderThickness="1" Grid.Column="1" HorizontalAlignment="Stretch"  Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Stretch" CornerRadius="20" Background="{Binding ProgessColor, Mode=OneWay}">
-            <TextBlock FontSize="120" Text="{Binding Path=Percentage, Mode=TwoWay}" HorizontalAlignment="Center"  VerticalAlignment="Center"></TextBlock>
+            <TextBlock FontSize="120" Text="{Binding Percentage, Mode=TwoWay, StringFormat=\{0:0.00\}}" HorizontalAlignment="Center"  VerticalAlignment="Center"></TextBlock>
         </Border>
 
         <ListBox Grid.Column="2" Margin="10" Grid.Row="1" ItemsSource="{Binding Path=Message}"></ListBox>
-        <Button Content="Button" Grid.Column="2" HorizontalAlignment="Left" Margin="81,10,0,0" VerticalAlignment="Top" Width="52" Click="Button_Click_2"/>
+        <Button Content="Cancel" Grid.Column="2" HorizontalAlignment="Left" Margin="81,10,0,0" VerticalAlignment="Top" Width="52" Click="Button_Click_2" IsCancel="True" Visibility="{Binding CanCancel, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+        <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="{Binding Path=Job, Mode=OneWay}" VerticalAlignment="Top" FontSize="36" />
 
     </Grid>
 </Window>
